<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:paddingStart="24dp" android:paddingEnd="24dp" android:paddingTop="8dp">
    <TextView android:id="@+id/torrent_metadata" android:layout_width="match_parent" android:layout_height="wrap_content" android:lineSpacingExtra="4dp" android:textIsSelectable="true" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:hint="@string/task_download_limit" app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/task_download_limit" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:layout_weight="1" android:hint="@string/task_upload_limit" app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/task_upload_limit" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/select_files_hint" android:textColor="@color/text_secondary" android:textSize="12sp" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton android:id="@+id/select_all_files" style="@style/Widget.MaterialComponents.Button.TextButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_all_files" />
        <com.google.android.material.button.MaterialButton android:id="@+id/select_no_files" style="@style/Widget.MaterialComponents.Button.TextButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_no_files" />
    </LinearLayout>
</LinearLayout>
